# cargo-preflight

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: autocomplete.rs  checks.rs  cli.rs  config.rs  error.rs  fix.rs  git.rs  main.rs  preflight.rs  util.rs
