[package]
name = "cargo-preflight"
version = "0.2.2"
edition = "2024"
authors = ["supinie <preflight@supinie.com>"]
description = "A custom Cargo subcommand to run local 'CI' on certain Git actions."
readme = "README.md"
repository = "https://github.com/supinie/cargo-preflight"
license = "MIT"
keywords = ["dev-tools", "testing", "CI", "git", "cli"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "development-tools::testing"]

[dependencies]
confy = "0.6.1"
anyhow = "1.0.98"
thiserror = "2.0.12"
clap = { version = "4.5.36", features = ["cargo", "derive"] }
clap-cargo = "0.15.2"
dirs = "6.0.0"
colored = "3.0.0"
inquire = "0.7.5"
cargo-shear = "1.2.4"
serde = { version = "1.0.219", features = ["derive"] }
gag = "1.0.0"
git2 = "0.20.1"
fuzzy-matcher = "0.3.7"
