[package]
name = "cargo-preflight"
version = "0.5.1"
edition = "2024"
authors = ["supinie <preflight@supinie.com>"]
description = "A custom Cargo subcommand to run local 'CI' on certain Git actions."
readme = "README.md"
repository = "https://github.com/supinie/cargo-preflight"
license = "MIT"
keywords = ["dev-tools", "testing", "CI", "git", "cli"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "development-tools::testing"]

[dependencies]
confy = "1.0.0"
anyhow = "1.0.98"
clap = { version = "4.5.44", features = ["cargo", "derive"] }
thiserror = "2.0.13"
clap-cargo = "0.16.0"
dirs = "6.0.0"
colored = "3.0.0"
inquire = "0.7.5"
cargo-shear = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
gag = "1.0.0"
git2 = "0.20.2"
fuzzy-matcher = "0.3.7"
tabled = "0.20.0"
ripsecrets = "0.1.11"
termcolor = "1.4.1"
